--- a/feiras.html
+++ b/feiras.html
@@ -23,8 +23,8 @@
     <main>
         <section class="feiras-section">
             <h1>Feiras de Agricultura familiar
-                <p><span style="font-weight: normal; font-size: smaller;">Confira algumas feiras com agricultores familiares e orgânicos, aproveite e convença o papai, mamãe, titia, titio, vovó, vovô ou um responsável para conhecer mais sobre pessoas como eu, o pequeno agricultor. </span></p>
-                    <p><span style="font-weight: normal; font-size: smaller;">Acesse: google.maps. </span></p>
+                <p><span style="font-weight: normal; font-size: smaller;">Confira algumas feiras com agricultores familiares e orgânicos, aproveite e convença o papai, mamãe, titia, titio, vovô, vovó ou um responsável a te levar para conhecer mais sobre pessoas como eu, o pequeno agricultor. </span></p>
+                    <p><span style="font-weight: normal; font-size: smaller;">Acesse: google.maps </span></p>
             </h1>             
             <div class="info-card-container">
                 <div class="info-card">
