--- a/beneficios.html
+++ b/beneficios.html
@@ -46,7 +46,7 @@
             <div class="beneficio-item reversed">
                 <div class="beneficio-text">
                     <h2>AJUDA A MANTER MUITOS TIPOS DE PLANTAS E ANIMAIS</h2>
-                    <p>A agricultura familiar ajuda a cuidar de muitos tipos de plantas e animais. Eles plantam diferentes tipos de culturas (que são as plantas que eles cultivam, como frutas, verduras e grãos) e isso ajuda a manter o ambiente saudável. Essa variedade protege as plantas contra insetos e doenças e ajuda a natureza a ficar em equilíbrio, o que é bom para todos que moram no campo.</p>
+                    <p>A agricultura familiar ajuda a cuidar de muitos tipos de plantas e animais. Eles plantam diferentes tipos de culturas (que são as plantas que eles cultivam, como frutas, verduras e grãos) e isso ajuda a manter o ambiente saudável. Essa variedade protege as plantas contra insetos e doenças e ajuda a natureza a ficar em equilíbrio, o que é bom para todos que moram no campo e na cidade.</p>
                 </div>
                 <img src="imagens/beneficio4.jpg" alt="Preserva a biodiversidade">
             </div>
