--- a/plante.html
+++ b/plante.html
@@ -57,7 +57,7 @@
                         </div>
                         <div class="flip-card-back">
                             <h3>Preparação do Solo</h3>
-                            <p>Para as plantas crescerem bem, a terra precisa estar rica e cheia de nutrientes. Você pode adicionar compostagem na terra para deixá-la melhor. Aqui, é uma boa ideia pedir ajuda aos pais!</p>
+                            <p>Para as plantas crescerem bem, a terra precisa estar rica e cheia de nutrientes. Você pode adicionar compostagem na terra para deixá-la melhor. Aqui, é uma boa ideia pedir ajuda aos responsáveis!</p>
                         </div>
                     </div>
                 </div>
