--- a/plante.html
+++ b/plante.html
@@ -81,7 +81,7 @@
                         </div>
                         <div class="flip-card-back">
                             <h3>Cuidados Diários</h3>
-                            <p>As plantas precisam de cuidados diários. Regue quando a terra estiver seca e fique de olho para ver se estão crescendo bem. Se tiver alguma dúvida, peça ajuda aos seus irmão, amigos e pais para cuidar direitinho. Uma ótima atividade para trabalhar em equipe.</p>
+                            <p>As plantas precisam de cuidados diários. Regue quando a terra estiver seca e fique de olho para ver se estão crescendo bem. Se tiver alguma dúvida, peça ajuda aos seus familiares e amigos para cuidar direitinho. Uma ótima atividade para trabalhar em equipe.</p>
                         </div>
                     </div>
                 </div>
